Fix the dark mode with white text

--- a/style.css
+++ b/style.css
@@ -115,3 +115,13 @@ background-image: linear-gradient(90deg, rgba(255,68,194,1) 0%, rgba(231,2,226,1
 {
 	padding-left:5px;color:grey;
 }
+
+h1{
+	color: white;
+}
+h4 {
+	color: white;
+}
+h2 {
+	color: white;
+}
